# hcdformat

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  convert.py  generate_json_schema.py  generate_spec_html.py  hcdf.schema.json  hcdf.xsd  package.xml  spec.html  template.hcdf  validate.py
.github/workflows/: deploy-pages.yml  validate.yml
docs/: extension-example-imu-stability.md
docs/design/: stream-profiles.md  topology-types.md  versioning.md
examples/: drone-quadrotor.hcdf  drone-quadrotor.json  humanoid-mobile-base.hcdf  test-minimal.hcdf
examples/profiles/: operational.streams.xml
extensions/: hcdf-ext-1722.xsd  hcdf-ext-gazebo.xsd  hcdf-ext-ros2.xsd
tests/: run_tests.py
tests/invalid/: bad-element-order.hcdf  duplicate-root-children.expected  duplicate-root-children.hcdf  geometry-two-primitives.hcdf  invalid-body-frame.expected  invalid-body-frame.hcdf  invalid-port-type.hcdf  missing-comp-name.expected  missing-comp-name.hcdf  missing-hcdf-name.hcdf  missing-joint-parent.hcdf  wrong-joint-type.hcdf  wrong-version-type.expected  wrong-version-type.hcdf
tests/valid/: all-joint-types.hcdf  comp-ip-rating-temp.hcdf  empty-network.hcdf  extension-only.hcdf  minimal-comp.hcdf  motor-solenoid.hcdf  power-solar-supercap.hcdf  root-metadata-aerospace.hcdf  root-metadata-minimal.hcdf  root-metadata.hcdf  (+3 more)
tools/hcdf-cli/: Cargo.toml
tools/hcdf-cli/src/: main.rs
vehicles/: ELM4.hcdf  MRB3_Sensors.hcdf  MR_Buggy3.hcdf  elm4.hcdf  elm4s.hcdf  melm.hcdf  melms.hcdf  mrb3s.hcdf  mrbuggy3.hcdf  x500.hcdf
website/: index.html
(+16 files in other folders)
